--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "convex": "^1.31.7",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "form-data": "^4.0.5",
     "framer-motion": "^12.33.0",
     "groq-sdk": "^0.37.0",
     "input-otp": "1.4.1",
@@ -56,8 +57,9 @@
     "mammoth": "^1.11.0",
     "next": "^16.1.6",
     "next-themes": "^0.4.6",
+    "node-fetch": "^3.3.2",
     "openai": "^6.21.0",
-    "pdf-parse": "^2.4.5",
+    "pdfjs-dist": "^5.4.624",
     "react": "^19.2.4",
     "react-day-picker": "9.8.0",
     "react-dom": "^19.2.4",
@@ -76,6 +78,8 @@
     "@tailwindcss/postcss": "^4.1.9",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^22.19.7",
+    "@types/pdf-parse": "^1.1.5",
+    "@types/pdfjs-dist": "^2.10.377",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^5.1.3",
